# agentops-reliability-lab

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/api/: package.json  pyproject.toml  tsconfig.json
apps/api/src/: index.test.ts  index.ts
apps/api/src/evaluation/application/scenario-definitions/: scenario-definition.parser.test.ts  scenario-definition.parser.ts  scenario-definition.schema.ts
apps/api/src/evaluation/domain/results/: check-result.ts  evaluation-result.test.ts  evaluation-result.ts
apps/api/src/evaluation/domain/scenarios/: scenario.ts
apps/api/src/llm_reliability_lab_api/: __init__.py
apps/api/tests/: foundation.test.ts  test_project_foundation.py
apps/api/tests/evaluation/domain/results/: evaluation-result.test.ts
apps/web/: README.md
docs/: business-overview.md  technical-architecture.md
specs/: scenario-definition-spec.md  scenario-spec.md
